--- a/notebook-service-frontend/src/UserLogin/UserLogin.css
+++ b/notebook-service-frontend/src/UserLogin/UserLogin.css
@@ -3,7 +3,7 @@
     }
 .modal-sm {
     position: fixed;
-    top:25%;
+    top:5%;
 }
 .modal-header {
     background-color: rgb(32, 51, 62);
@@ -24,16 +24,16 @@ input[type=username], input[type=password] {
     background-color: rgb(49,77,91);
     color: white;
     margin: 16px 0;
-    width: 50%;
+    width: 70%;
     position: relative;
-    left: 25%;
+    left: 15%;
     border: 2px solid rgb(37,58,71);
     text-align: center;
     
     
 }
 
- Button[type=login],Button[type=signin]{
+ Button[type=submit],Button[type=button]{
     background-color: rgb(65, 190,168);
     border: none;
     text-align: center;
@@ -49,4 +49,9 @@ button:hover {
 
 .ButtonContainer {
     text-align: center;
+}
+
+.img-rounded {
+    height: 200px;
+    width: 200px;
 }
