--- a/notebook-service-frontend/src/containers/UserLogin/UserLogin.css
+++ b/notebook-service-frontend/src/containers/UserLogin/UserLogin.css
@@ -49,11 +49,11 @@ button:hover {
     text-align: left;
 }
 
-.ButtonContainer {
+.LoginButtonContainer {
     text-align: center;
 }
 
-.img-rounded {
+img.LoginLogo {
     height: 200px;
     width: 200px;
 }
