--- a/notebook-service-frontend/src/containers/UserLogin/UserRegister/UserRegister.css
+++ b/notebook-service-frontend/src/containers/UserLogin/UserRegister/UserRegister.css
@@ -49,11 +49,11 @@ button:hover {
     text-align: left;
 }
 
-.ButtonContainer {
+.RegisterButtonContainer {
     text-align: center;
 }
 
-.img-rounded {
+img.RegisterLogo {
     height: 200px;
     width: 200px;
 }
