real-time brand table.
hozzáadunk egy terméket egyből bekerül a táblába. nem kell frissíteni az oldalt.

--- a/notebook-service-frontend/src/components/BrandTable/BrandTable.css
+++ b/notebook-service-frontend/src/components/BrandTable/BrandTable.css
@@ -1,5 +1,6 @@
-.ReactTable {
-    left: 25%;
+.ReactTable.-striped.-highlight {
+    width: 100%;
+    left: 0;
 }
 
 input[type=brandname] {
@@ -16,5 +17,4 @@ input[type=brandname] {
     background-color: rgb(65, 190,168);
     border: none;
     text-align: center;
-    left: 70%;
 }
