--- a/notebook-service-frontend/src/components/BrandTable/BrandTable.css
+++ b/notebook-service-frontend/src/components/BrandTable/BrandTable.css
@@ -6,15 +6,42 @@
 input[type=brandname] {
     background-color:white;
     color: black;
-    margin: 16px 0 ;
-    width: 10%;
+    margin: 16px 0 0;
+    font-size: 25px;
+    width: 20%;
     position: relative;
     border: 2px solid rgb(37,58,71);
-    text-align: left; 
+    text-align: center; 
+}
+
+.form-group {
+    margin: 0 0 0 5%;
 }
 
 .addBrand{
     background-color: rgb(65, 190,168);
     border: none;
     text-align: center;
+    size: 50px;
+}
+
+.btn.btn-default {
+    font-size: 25px;
+    border-radius: 15px;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.addBrandButton {
+    background-color: rgb(65, 190,168);
+    border: 3px solid black;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    width: 20%;
+}
+.addBrandButton:hover {
+    background-color: green !important;
+}
+
+.ReactTable.-striped.-highlight {
+    width: 75%;
+    float: right;
 }
