--- a/notebook-service-frontend/src/components/UserTable/UserTable.css
+++ b/notebook-service-frontend/src/components/UserTable/UserTable.css
@@ -1,27 +1,13 @@
-.ReactTable {
-    background-color: white;
-    width: 25%;
-    height: 25%;
+.ReactTable.-striped.-highlight {
+    width: 100%;
 
 }
 
-/* table.table-striped.table-bordered.table-condensed.table-hover {
-    top:50%;
-} */
-
-td, th {
-    padding: 16px;
-    border: 1px solid black;
-    background-color: white;
+.form-horizontal {
+    margin-top: 10px;
 }
 
-th {
-    height: 50px;
-    text-align: center;
-    padding: 16px;
-    border-bottom: 1px solid black;
-}
-
-th:hover, td:hover {
-    background-color: gray;
+.splitter-layout {
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
