--- a/notebook-service-frontend/src/containers/UserLogin/UserLogin.css
+++ b/notebook-service-frontend/src/containers/UserLogin/UserLogin.css
@@ -39,6 +39,7 @@ input[type=username], input[type=password] {
     background-color: rgb(65, 190,168);
     border: none;
     text-align: center;
+    text-decoration: none;
 }
 
 button:hover {
