--- a/notebook-service-frontend/src/containers/UserRegister/UserRegister.css
+++ b/notebook-service-frontend/src/containers/UserRegister/UserRegister.css
@@ -57,3 +57,8 @@ img.RegisterLogo {
     height: 200px;
     width: 200px;
 }
+
+.registerButton a {
+    text-decoration: none;
+    color: rgb(51, 51, 51);
+}
