Fidling with Product Modal Size + White text.

--- a/notebook-service-frontend/src/components/NavBar/NavBar.css
+++ b/notebook-service-frontend/src/components/NavBar/NavBar.css
@@ -1,7 +1,10 @@
 .container-fluid {
     background-color:rgb(52,152,134);
     border: 0;
+}
 
+.custom-modal {
+    width: 50%;
 }
 
 .navbar.navbar-inverse.navbar-static-top {
