--- a/notebook-service-frontend/src/containers/Products/Products.css
+++ b/notebook-service-frontend/src/containers/Products/Products.css
@@ -20,6 +20,17 @@
     left: 68px;
 }
 
+.TypeTop {
+    color: white !important;
+    margin-top: 25px;
+}
+
+.TypeTopInput {
+    position: absolute;
+    left: 68px;
+    margin-top: 25px;
+}
+
 .ClientModal {
     color: white !important;
     text-align: left !important;
@@ -29,4 +40,18 @@
     position: absolute;
     left: 17px;
     bottom:-47px;
+}
+
+.SelectBrandDropdown {
+    position: absolute;
+    left: 83px;
+    top: -5px;
+    height: 34px;
+    border-radius: 5px;
+}
+
+.AddBrandButton {
+    position: absolute;
+    left: 275px;
+    top: -5px;
 }
