--- a/notebook-service-frontend/src/containers/Products/Products.css
+++ b/notebook-service-frontend/src/containers/Products/Products.css
@@ -55,3 +55,10 @@
     left: 275px;
     top: -5px;
 }
+
+.ProductAlertMessage {
+    width: 30%;
+    position: absolute;
+    left: 300px;
+    bottom: -80px;
+}
