--- a/notebook-service-frontend/src/containers/Maintenance/Maintenance.css
+++ b/notebook-service-frontend/src/containers/Maintenance/Maintenance.css
@@ -61,8 +61,12 @@
     width: 60% !important;
 }
 
-.SelectedModificationDropdown{
+.SelectedModificationDropdown {
     position: absolute;
-    right: 100px;
-    top: 132px;
+    right: 150px;
+    top: 163px;
+}
+
+.MaintenanceData {
+    margin-bottom: 10px !important;
 }
