--- a/notebook-service-frontend/src/assets/CSS/Maintenance.css
+++ b/notebook-service-frontend/src/assets/CSS/Maintenance.css
@@ -19,24 +19,20 @@
 .ClientJumbotronPadding {
     padding-top: 0px !important;
     padding-bottom: 20px !important;
-    margin-left: 30px;
     margin-top: 30px;
+    margin-left: 60px;
+    margin-right: 20px;
     background-color:rgb(32, 51, 62) !important;
     width: 45%;
     border-radius: 5px;
 }
 
-.MainServiceScreen {
-    display: flex;
-    background-color: rgb(49,77,91);
-}
-
 .MaintenanceJumbotronPadding {
     padding-top: 0px !important;
     padding-bottom: 20px !important;
-    margin-right: 30px;
-    margin-top: 30px;
     margin-left: 20px;
+    margin-right: 60px;
+    margin-top: 30px;
     background-color:  rgb(32, 51, 62) !important;
     width: 45%;
     border-radius: 5px;
@@ -44,6 +40,11 @@
 
 .MaintenanceParagraph {
     background-color:  rgb(32, 51, 62) !important;
+}
+
+.MainServiceScreen {
+    display: flex;
+    background-color: rgb(49,77,91);
 }
 
 .form-group {
@@ -88,6 +89,7 @@
 
 .SelectedModificationDropdown {
     width: 100%;
+    color: black;
     margin-top: 5px;
 }
 
@@ -103,4 +105,6 @@
     text-align: left;
 }
 
-
+.DatePicker {
+    color: black;
+}
