--- a/notebook-service-frontend/src/assets/CSS/ModificationTable.css
+++ b/notebook-service-frontend/src/assets/CSS/ModificationTable.css
@@ -5,3 +5,22 @@
 .ReactTable {
     width: 100%;
 }
+
+.ModificationInputJumbotron {
+    background-color: rgb(49,77,91) !important;
+    margin-bottom: 0px !important;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+
+}
+
+.ModificationReactTableJumbotron {
+    background-color: rgb(49,77,91) !important;
+    padding-top: 20px !important;
+
+}
+
+.form-horizontal {
+    margin-top: 10px;
+    width: 95%;
+}
