--- a/notebook-service-frontend/src/assets/CSS/Maintenance.css
+++ b/notebook-service-frontend/src/assets/CSS/Maintenance.css
@@ -5,6 +5,7 @@
     color: black !important;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom: solid rgb(229, 229, 229) 1px;
 }
 
 .MaintenanceHeader {
@@ -14,6 +15,7 @@
     color: black !important;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+    border-bottom: solid rgb(229, 229, 229) 1px;
 }
 
 .ClientJumbotronPadding {
