--- a/notebook-service-frontend/src/assets/CSS/ModificationTable.css
+++ b/notebook-service-frontend/src/assets/CSS/ModificationTable.css
@@ -24,3 +24,16 @@
     margin-top: 10px;
     width: 95%;
 }
+
+.AddButton {
+    margin-left: 10px !important;
+    margin-top: 15px !important;
+}
+
+.ModificationInputFormHorizontal {
+    margin-left: 26px;
+}
+
+.ModificationInputRow {
+    margin-bottom: 10px;
+}
